@@ -9,6 +9,7 @@ import com.example.demo.entity.Prestador;
 import com.example.demo.entity.Solicitud;
 import com.example.demo.entity.SolicitudInvitacion;
 import com.example.demo.entity.enums.EstadoSolicitud;
+import com.example.demo.repository.HabilidadRepository;
 import com.example.demo.repository.PrestadorRepository;
 import com.example.demo.repository.SolicitudInvitacionRepository;
 import com.example.demo.repository.SolicitudRepository;
@@ -24,12 +25,12 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -43,6 +44,7 @@ public class SolicitudService {
     private static final int MAX_INVITES_NON_CRITICA = 6;
     private static final int MAX_INVITES_CRITICA = 12;
     private static final int CANDIDATE_BATCH_SIZE = 20;
+    private static final int MAX_COTIZACION_ROUNDS = 2;
 
     @Autowired private NotificacionesService notificacionesService;
     @Autowired private com.example.demo.websocket.SolicitudEventsPublisher solicitudEventsPublisher;
@@ -51,10 +53,16 @@ public class SolicitudService {
     @Autowired private SimulatedCotizacionClient cotizacionClient;
     @Autowired private SimulatedSolicitudesClient solicitudesClient;
     @Autowired private SolicitudInvitacionRepository solicitudInvitacionRepository;
+    @Autowired private MatchingPublisherService matchingPublisherService;
+    @Autowired private HabilidadRepository habilidadRepository;
+
+    // Ventana por defecto (minutos) para considerar un turno a partir de "horario"
+    @org.springframework.beans.factory.annotation.Value("${solicitudes.invite.slot-minutes:60}")
+    private int defaultInviteSlotMinutes;
 
     @Transactional
     public SolicitudTop3Resultado recotizar(Long solicitudId) {
-        Solicitud solicitud = solicitudRepository.findById(solicitudId)
+        Solicitud solicitud = solicitudRepository.findByExternalId(solicitudId)
             .orElseThrow(() -> new IllegalArgumentException("Solicitud no encontrada: " + solicitudId));
 
         if (solicitud.getEstado() != EstadoSolicitud.CANCELADA) {
@@ -62,25 +70,32 @@ public class SolicitudService {
             throw new IllegalStateException("La solicitud no está CANCELADA");
         }
 
-        Long rubroId = Objects.requireNonNull(solicitud.getRubroId(), "rubroId requerido");
+        Long rubroId = resolveRubroId(solicitud);
 
-        // Base: excluí todos los que YA COTIZARON esta solicitud
-        List<Prestador> candidatos = prestadorRepository.findTopByRubroExcluyendoLosQueCotizaron(
-            rubroId, solicitud.getId(), PageRequest.of(0, 10) // traigo 10 por si alguno lo filtro luego
+        int maxInicial = solicitud.isEsCritica() ? INITIAL_INVITES_CRITICA : INITIAL_INVITES_NON_CRITICA;
+
+        Set<Long> invitadosPrevios = new HashSet<>(
+            solicitudInvitacionRepository.findPrestadorIdsBySolicitud(solicitud.getId())
+        );
+        invitadosPrevios.removeIf(Objects::isNull);
+
+        List<Prestador> seleccion = seleccionarPrestadores(
+            solicitud,
+            rubroId,
+            maxInicial,
+            true,
+            invitadosPrevios
         );
 
         // Extra: si hubo asignado directo y querés excluirlo aunque no haya cotizado
         Long asignado = obtenerPrestadorAsignadoId(solicitud);
         if (asignado != null) {
-            candidatos = candidatos.stream().filter(p -> !p.getId().equals(asignado)).toList();
+            seleccion = seleccion.stream().filter(p -> !Objects.equals(p.getId(), asignado)).toList();
         }
-        candidatos = candidatos.stream()
-            .filter(p -> estaLibre(p, solicitud))
-            .toList();
 
-        int maxInicial = solicitud.isEsCritica() ? INITIAL_INVITES_CRITICA : INITIAL_INVITES_NON_CRITICA;
-        List<Prestador> seleccion = candidatos.stream().limit(maxInicial).toList();
         if (seleccion.isEmpty()) {
+            log.warn("Sin candidatos ACTIVO para habilidad {} ni rubro {} (solicitud {}) — se mantiene CANCELADA",
+                solicitud.getHabilidadId(), rubroId, solicitud.getId());
             var out = new SolicitudTop3Resultado();
             out.setSolicitudId(solicitud.getId());
             out.setDescripcion(solicitud.getDescripcion());
@@ -134,7 +149,42 @@ public class SolicitudService {
     public List<SolicitudTop3Resultado> procesarTodasLasCreadas() {
         List<Solicitud> creadas = solicitudesClient.obtenerSolicitudesCreadas();
         log.info("Procesando {} solicitudes en estado CREADA", creadas.size());
-        return creadas.stream().map(this::procesarUnaSolicitud).collect(Collectors.toList());
+        return procesarSolicitudesInterno(creadas);
+    }
+
+    @Transactional
+    public List<SolicitudTop3Resultado> procesarSolicitudes(List<Solicitud> solicitudes) {
+        if (solicitudes == null || solicitudes.isEmpty()) {
+            return List.of();
+        }
+        return procesarSolicitudesInterno(solicitudes);
+    }
+
+    private List<SolicitudTop3Resultado> procesarSolicitudesInterno(List<Solicitud> solicitudes) {
+        List<SolicitudTop3Resultado> resultados = solicitudes.stream()
+            .filter(Objects::nonNull)
+            .map(this::procesarUnaSolicitud)
+            .collect(Collectors.toList());
+        publicarResultados(resultados);
+        return resultados;
+    }
+
+    private void publicarResultados(List<SolicitudTop3Resultado> resultados) {
+        if (resultados == null || resultados.isEmpty()) {
+            return;
+        }
+        try {
+            MatchingPublisherService.PublishResult publishResult = matchingPublisherService.publishSolicitudesTop3(resultados);
+            if (publishResult.success()) {
+                log.info("Evento top3 publicado messageId={} status={}", publishResult.messageId(), publishResult.status());
+            } else if (publishResult.messageId() == null) {
+                log.info("Publicación top3 omitida: {}", publishResult.errorMessage());
+            } else if (publishResult.errorMessage() != null) {
+                log.warn("Publicación top3 no exitosa status={} error={}", publishResult.status(), publishResult.errorMessage());
+            }
+        } catch (Exception e) {
+            log.error("Error inesperado al publicar evento top3", e);
+        }
     }
 
     private SolicitudTop3Resultado procesarUnaSolicitud(Solicitud solicitud) {
@@ -143,23 +193,20 @@ public class SolicitudService {
             return procesarConPrestadorAsignado(solicitud, prestadorAsignadoId);
         }
 
-        Long rubroId = Objects.requireNonNull(
-            solicitud.getRubroId(),
-            "categoriaId (rubro) requerido en solicitud " + solicitud.getId()
-        );
-
-        List<Prestador> candidatos = prestadorRepository.findTopByRubroRanked(
-            rubroId, PageRequest.of(0, 10) // pedí más de 3 para que haya margen al filtrar
-        );
+        Long rubroId = resolveRubroId(solicitud);
 
         int maxInicial = solicitud.isEsCritica() ? INITIAL_INVITES_CRITICA : INITIAL_INVITES_NON_CRITICA;
-        List<Prestador> seleccion = candidatos.stream()
-            .filter(p -> estaLibre(p, solicitud))
-            .limit(maxInicial)
-            .toList();
+        List<Prestador> seleccion = seleccionarPrestadores(
+            solicitud,
+            rubroId,
+            maxInicial,
+            false,
+            Collections.emptySet()
+        );
 
         if (seleccion.isEmpty()) {
-            log.warn("Sin candidatos ACTIVO para rubro {} (solicitud {}) — se mantiene en CREADA", rubroId, solicitud.getId());
+            log.warn("Sin candidatos ACTIVO para habilidad {} ni rubro {} (solicitud {}) — se mantiene en CREADA",
+                solicitud.getHabilidadId(), rubroId, solicitud.getId());
             SolicitudTop3Resultado out = new SolicitudTop3Resultado();
             out.setSolicitudId(solicitud.getId());
             out.setDescripcion(solicitud.getDescripcion());
@@ -184,10 +231,11 @@ public class SolicitudService {
         );
 
         List<InvitacionCotizacionDTO> invitaciones = new ArrayList<>();
+        Long rubroIdParaInvitacion = resolveRubroId(solicitud);
         for (Prestador prestador : seleccion) {
             invitaciones.add(enviarInvitacion(
                 solicitud,
-                rubroId,
+                rubroIdParaInvitacion,
                 prestador,
                 "Invitación a cotizar",
                 "Invitación de cotización enviada",
@@ -207,7 +255,7 @@ public class SolicitudService {
     }
 
     private SolicitudTop3Resultado procesarConPrestadorAsignado(Solicitud solicitud, Long prestadorId) {
-        Prestador p = prestadorRepository.findById(prestadorId).orElse(null);
+        Prestador p = prestadorRepository.findByExternalId(prestadorId).orElse(null);
 
         SolicitudTop3Resultado out = new SolicitudTop3Resultado();
         out.setSolicitudId(solicitud.getId());
@@ -222,9 +270,15 @@ public class SolicitudService {
             return out;
         }
 
+        Long rubroId = resolveRubroId(solicitud);
+        if (rubroId == null) {
+            log.warn("No se pudo resolver rubro para solicitud {} (habilidad {}) al asignar prestador {}",
+                solicitud.getId(), solicitud.getHabilidadId(), prestadorId);
+        }
+
         InvitacionCotizacionDTO aviso = buildInvitacionDTO(
             solicitud,
-            Objects.requireNonNull(solicitud.getRubroId()),
+            rubroId,
             p,
             "Asignación directa de la solicitud por favor cotizar"
         );
@@ -276,6 +330,7 @@ public class SolicitudService {
         return InvitacionCotizacionDTO.builder()
             .solicitudId(s.getId())
             .rubroId(rubroId)
+            .habilidadId(s.getHabilidadId())
             .prestadorId(p.getId())
             .prestadorNombre(p.getNombre() + " " + p.getApellido())
             .mensaje(mensajeBase + " " + s.getId())
@@ -333,7 +388,7 @@ public class SolicitudService {
 
     @Transactional
     public boolean invitarPrestadorAdicional(Solicitud solicitud) {
-        Long rubroId = Objects.requireNonNull(solicitud.getRubroId(), "rubroId requerido");
+        Long rubroId = resolveRubroId(solicitud);
         int round = solicitud.getCotizacionRound();
         Set<Long> invitados = new HashSet<>(
             solicitudInvitacionRepository.findPrestadorIdsBySolicitudAndRound(solicitud.getId(), round)
@@ -345,17 +400,19 @@ public class SolicitudService {
             return false;
         }
 
-        List<Prestador> candidatos = prestadorRepository.findTopByRubroExcluyendoLosQueCotizaron(
+        List<Prestador> candidatos = seleccionarPrestadores(
+            solicitud,
             rubroId,
-            solicitud.getId(),
-            PageRequest.of(0, CANDIDATE_BATCH_SIZE)
+            CANDIDATE_BATCH_SIZE,
+            true,
+            invitados
         );
 
         Long asignado = obtenerPrestadorAsignadoId(solicitud);
         Prestador elegido = candidatos.stream()
-            .filter(p -> asignado == null || !p.getId().equals(asignado))
-            .filter(p -> estaLibre(p, solicitud))
+            .filter(p -> asignado == null || !Objects.equals(p.getId(), asignado))
             .filter(p -> !invitados.contains(p.getId()))
+            .filter(p -> estaLibre(p, solicitud))
             .findFirst()
             .orElse(null);
 
@@ -389,25 +446,128 @@ public class SolicitudService {
         return null;
     }
 
-    public void cancelarPorId(Long solicitudId){
-        Optional<Solicitud> Opt = solicitudRepository.findById(solicitudId);
-        Solicitud s = Opt.get();
-
-        if (Opt.isEmpty()){
-            System.out.println("solicitud no encontrada.");
-        }else if(s.getEstado() == EstadoSolicitud.COMPLETADA){
-            System.out.println("no se puede cancelar una solicitu completada.");
-        }else if (s.getEstado() == EstadoSolicitud.CANCELADA){
-            System.out.println("la solicitud ya esta cancelada.");
-        }else{
-            s.setEstado(EstadoSolicitud.CANCELADA);
-            System.out.println("solicitud cancelada correctamente");
+    @Transactional
+    public void registrarRechazoCotizacion(Long solicitudId,
+                                           Long prestadorId,
+                                           Long cotizacionExternaId,
+                                           String comentario) {
+        if (solicitudId == null) {
+            throw new IllegalArgumentException("solicitud_id requerido en evento cotizacion.rechazada");
         }
-        s.setEstado(EstadoSolicitud.CANCELADA);
-        solicitudRepository.save(s);
-        // Notificar cancelación
+        if (prestadorId == null) {
+            throw new IllegalArgumentException("prestador_id requerido en evento cotizacion.rechazada");
+        }
+
+        Solicitud solicitud = solicitudRepository.findByExternalId(solicitudId)
+            .orElseThrow(() -> new IllegalArgumentException("Solicitud no encontrada: " + solicitudId));
+
+        var invitacionOpt = solicitudInvitacionRepository
+            .findFirstBySolicitud_IdAndPrestador_IdOrderByRoundDesc(solicitud.getId(), prestadorId);
+
+        SolicitudInvitacion invitacion = invitacionOpt.orElseThrow(() ->
+            new IllegalStateException("No se encontró invitación para la solicitud "
+                + solicitudId + " y prestador " + prestadorId));
+
+        if (invitacion.isRechazada()) {
+            log.debug("Evento cotizacion.rechazada repetido. solicitud={} prestador={} round={}",
+                solicitudId, prestadorId, invitacion.getRound());
+            return;
+        }
+
+        invitacion.setRechazada(true);
+        invitacion.setRechazadaAt(LocalDateTime.now());
+        if (comentario != null && !comentario.isBlank()) {
+            invitacion.setRechazoMotivo(comentario);
+        }
+        if (cotizacionExternaId != null) {
+            invitacion.setCotizacionIdExterno(cotizacionExternaId);
+        }
+        solicitudInvitacionRepository.save(invitacion);
+
+        int round = invitacion.getRound();
+        long totalInvitaciones = solicitudInvitacionRepository.countBySolicitud_IdAndRound(solicitud.getId(), round);
+        long rechazos = solicitudInvitacionRepository.countBySolicitud_IdAndRoundAndRechazadaTrue(solicitud.getId(), round);
+        boolean quedanPendientes = solicitudInvitacionRepository
+            .existsBySolicitud_IdAndRoundAndRechazadaFalse(solicitud.getId(), round);
+
+        Map<String, Object> details = new HashMap<>();
+        details.put("solicitudId", solicitud.getId());
+        details.put("round", round);
+        details.put("prestadorId", prestadorId);
+        if (cotizacionExternaId != null) {
+            details.put("cotizacionId", cotizacionExternaId);
+        }
+        if (comentario != null && !comentario.isBlank()) {
+            details.put("comentario", comentario);
+        }
+        details.put("totalInvitaciones", totalInvitaciones);
+        details.put("rechazos", rechazos);
+
         solicitudEventsPublisher.notifySolicitudEvent(
-            s,
+            solicitud,
+            "COTIZACION_RECHAZADA",
+            "Cotización rechazada",
+            "Prestador " + prestadorId + " rechazó la cotización en round " + round,
+            details
+        );
+
+        if (!quedanPendientes && totalInvitaciones > 0 && totalInvitaciones == rechazos) {
+            manejarRoundSinCotizaciones(solicitud, round);
+        }
+    }
+
+    private void manejarRoundSinCotizaciones(Solicitud solicitud, int roundActual) {
+        if (roundActual >= MAX_COTIZACION_ROUNDS) {
+            solicitud.setEstado(EstadoSolicitud.CANCELADA);
+            solicitudRepository.save(solicitud);
+            solicitudEventsPublisher.notifySolicitudEvent(
+                solicitud,
+                "SOLICITUD_CANCELADA_POR_RECHAZOS",
+                "Solicitud cancelada por rechazos",
+                "Todos los prestadores rechazaron en el round " + roundActual,
+                Map.of(
+                    "solicitudId", solicitud.getId(),
+                    "round", roundActual
+                )
+            );
+            return;
+        }
+
+        solicitud.setEstado(EstadoSolicitud.CANCELADA);
+        solicitudRepository.save(solicitud);
+
+        try {
+            recotizar(solicitud.getId());
+        } catch (RuntimeException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new IllegalStateException("No se pudo iniciar la recotización automática para la solicitud "
+                + solicitud.getId(), e);
+        }
+    }
+
+    public void cancelarPorId(Long solicitudId){
+        if (solicitudId == null) {
+            throw new IllegalArgumentException("solicitudId requerido");
+        }
+
+        Solicitud solicitud = solicitudRepository.findByExternalId(solicitudId)
+            .orElseThrow(() -> new IllegalArgumentException("Solicitud no encontrada: " + solicitudId));
+
+        EstadoSolicitud estadoActual = solicitud.getEstado();
+        if (estadoActual == EstadoSolicitud.COMPLETADA) {
+            throw new IllegalStateException("No se puede cancelar una solicitud completada");
+        }
+        if (estadoActual == EstadoSolicitud.CANCELADA) {
+            log.info("Solicitud {} ya estaba cancelada, no se realizaron cambios", solicitudId);
+            return;
+        }
+
+        solicitud.setEstado(EstadoSolicitud.CANCELADA);
+        solicitudRepository.save(solicitud);
+
+        solicitudEventsPublisher.notifySolicitudEvent(
+            solicitud,
             "SOLICITUD_STATUS_CHANGED",
             "Solicitud cancelada",
             "La solicitud fue cancelada",
@@ -416,20 +576,85 @@ public class SolicitudService {
     }
 
     private boolean estaLibre(Prestador prestador, Solicitud solicitud) {
-        if (solicitud.getPreferenciaDia() == null ||
-            solicitud.getPreferenciaDesde() == null ||
-            solicitud.getPreferenciaHasta() == null) {
-            return true; // si no hay preferencia, no filtramos
+        return true;
+    }
+
+    private List<Prestador> seleccionarPrestadores(
+        Solicitud solicitud,
+        Long rubroId,
+        int maxInicial,
+        boolean excluirCotizados,
+        Set<Long> excluirPrestadores
+    ) {
+        List<Prestador> seleccion = new ArrayList<>();
+        Set<Long> seleccionados = new HashSet<>();
+        Set<Long> excluidos = (excluirPrestadores == null || excluirPrestadores.isEmpty())
+            ? Collections.emptySet()
+            : excluirPrestadores.stream()
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+        PageRequest page = PageRequest.of(0, CANDIDATE_BATCH_SIZE);
+
+        Long habilidadId = solicitud.getHabilidadId();
+        Long solicitudExternalId = solicitud.getId();
+
+        if (habilidadId != null) {
+            List<Prestador> porHabilidad = excluirCotizados && solicitudExternalId != null
+                ? prestadorRepository.findTopByHabilidadExcluyendoLosQueCotizaron(habilidadId, solicitudExternalId, page)
+                : prestadorRepository.findTopByHabilidadRanked(habilidadId, page);
+            agregarCandidatos(seleccion, seleccionados, porHabilidad, solicitud, maxInicial, excluidos);
         }
-    
-        List<Solicitud> asignadas = solicitudRepository.findAsignadasEnDiaYFranja(
-            prestador.getId(),
-            solicitud.getPreferenciaDia(),
-            solicitud.getPreferenciaDesde(),
-            solicitud.getPreferenciaHasta()
-        );
-    
-        return asignadas.isEmpty(); // libre si no hay choque
+
+        if (seleccion.size() < maxInicial) {
+            Long rubroFallback = (rubroId != null) ? rubroId : resolveRubroId(solicitud);
+            if (rubroFallback != null) {
+                List<Prestador> porRubro = excluirCotizados && solicitudExternalId != null
+                    ? prestadorRepository.findTopByRubroExcluyendoLosQueCotizaron(rubroFallback, solicitudExternalId, page)
+                    : prestadorRepository.findTopByRubroRanked(rubroFallback, page);
+                agregarCandidatos(seleccion, seleccionados, porRubro, solicitud, maxInicial, excluidos);
+            }
+        }
+
+        return seleccion;
+    }
+
+    private void agregarCandidatos(
+        List<Prestador> seleccion,
+        Set<Long> seleccionados,
+        List<Prestador> candidatos,
+        Solicitud solicitud,
+        int maxInicial,
+        Set<Long> excluidos
+    ) {
+        if (candidatos == null || candidatos.isEmpty()) {
+            return;
+        }
+        for (Prestador prestador : candidatos) {
+            if (seleccion.size() >= maxInicial) {
+                break;
+            }
+            if (!estaLibre(prestador, solicitud)) {
+                continue;
+            }
+            Long key = prestadorKey(prestador);
+            if (key == null) {
+                continue;
+            }
+            if ((excluidos.contains(key)) || !seleccionados.add(key)) {
+                continue;
+            }
+            seleccion.add(prestador);
+        }
+    }
+
+    private Long prestadorKey(Prestador prestador) {
+        if (prestador == null) {
+            return null;
+        }
+        if (prestador.getId() != null) {
+            return prestador.getId();
+        }
+        return prestador.getInternalId();
     }
 
     /**
@@ -438,37 +663,81 @@ public class SolicitudService {
      */
     @Transactional
     public List<Solicitud> crearDesdeEventos(List<SolicitudesCreadasDTO> eventos) {
-        return eventos.stream()
+        List<CreacionResultado> resultados = eventos.stream()
             .map(this::mapearYGuardar)
-            .collect(Collectors.toList());
-    }
+            .filter(Objects::nonNull)
+            .toList();
 
-    private Solicitud mapearYGuardar(SolicitudesCreadasDTO e) {
-        if (solicitudRepository.existsById(e.getSolicitudId())) {
-            return solicitudRepository.findById(e.getSolicitudId()).orElse(null);
+        List<Solicitud> solicitudes = resultados.stream()
+            .map(CreacionResultado::solicitud)
+            .filter(Objects::nonNull)
+            .collect(Collectors.toList());
+
+        List<Solicitud> nuevas = resultados.stream()
+            .filter(CreacionResultado::esNueva)
+            .map(CreacionResultado::solicitud)
+            .filter(Objects::nonNull)
+            .collect(Collectors.toList());
+
+        if (!nuevas.isEmpty()) {
+            procesarSolicitudes(nuevas);
         }
 
-        Solicitud.SolicitudBuilder b = Solicitud.builder()
-            .id(e.getSolicitudId())
-            .usuarioId(e.getUsuarioId())
-            .rubroId(e.getRubro())
-            .descripcion(e.getDescripcion())
-            .estado(EstadoSolicitud.CREADA)
-            .prestadorAsignadoId(e.getPrestadorId())
-            .fueCotizada(Boolean.TRUE.equals(e.getFueCotizada()))
-            .esCritica(Boolean.TRUE.equals(e.getEsCritica()));
+        return solicitudes;
+    }
 
-        // Preferencia horaria
+    private CreacionResultado mapearYGuardar(SolicitudesCreadasDTO e) {
+        // Buscar por ID externo, no por PK interno
+        var existenteOpt = solicitudRepository.findByExternalId(e.getSolicitudId());
+        if (existenteOpt.isPresent()) {
+            return new CreacionResultado(existenteOpt.get(), false);
+        }
+
+        // Estado (si viene), por defecto CREADA
+        EstadoSolicitud estado = EstadoSolicitud.CREADA;
+        if (e.getEstado() != null && !e.getEstado().isBlank()) {
+            try { estado = EstadoSolicitud.valueOf(e.getEstado().trim().toUpperCase()); }
+            catch (Exception ignore) { /* fallback a CREADA */ }
+        }
+
+        // esCritica: tomar es_urgente si viene, si no es_critica
+        boolean esCritica = Boolean.TRUE.equals(e.getEsUrgente()) || Boolean.TRUE.equals(e.getEsCritica());
+
+        Long habilidadId = e.getHabilidadId();
+        Long rubroId = resolveRubroId(e);
+
+        Solicitud.SolicitudBuilder b = Solicitud.builder()
+            .id(e.getSolicitudId()) // externo
+            .usuarioId(e.getUsuarioId()) // externo
+            .prestadorAsignadoId(e.getPrestadorId()) // externo (puede ser null)
+            .rubroId(rubroId) // opcional
+            .habilidadId(habilidadId) // opcional
+            .titulo(e.getTitulo())
+            .descripcion(e.getDescripcion())
+            .estado(estado)
+            .fueCotizada(Boolean.TRUE.equals(e.getFueCotizada()))
+            .esCritica(esCritica);
+
+        // fecha + horario
+        if (e.getFecha() != null && !e.getFecha().isBlank()) {
+            b.fecha(LocalDate.parse(e.getFecha().trim()));
+        }
+        if (e.getHorario() != null && !e.getHorario().isBlank()) {
+            b.horario(LocalTime.parse(e.getHorario().trim()));
+        }
+
+        // Compat: si viene preferencia_horaria (old formato), mapear al nuevo
         var ph = e.getPreferenciaHoraria();
         if (ph != null) {
-            if (ph.getDia() != null && !ph.getDia().isBlank()) {
-                b.preferenciaDia(LocalDate.parse(ph.getDia()));
+            if ((e.getFecha() == null || e.getFecha().isBlank()) && ph.getDia() != null && !ph.getDia().isBlank()) {
+                b.fecha(LocalDate.parse(ph.getDia().trim()));
             }
-            if (ph.getVentana() != null && !ph.getVentana().isBlank()) {
-                b.preferenciaVentanaStr(ph.getVentana());
+            if ((e.getHorario() == null || e.getHorario().isBlank()) && ph.getVentana() != null && !ph.getVentana().isBlank()) {
                 var v = parseVentana(ph.getVentana());
-                b.preferenciaDesde(v.desde);
-                b.preferenciaHasta(v.hasta);
+                b.horario(v.desde); // tomar el desde como horario
+                
+                
+                b.preferenciaVentanaStr(ph.getVentana());
             }
         }
 
@@ -483,7 +752,70 @@ public class SolicitudService {
                 Map.of()
             );
         } catch (Exception ignored) {}
-        return creada;
+        return new CreacionResultado(creada, true);
+    }
+
+    private Long resolveRubroId(Solicitud solicitud) {
+        if (solicitud == null) {
+            return null;
+        }
+        if (solicitud.getRubroId() != null) {
+            return solicitud.getRubroId();
+        }
+        Long habilidadId = solicitud.getHabilidadId();
+        if (habilidadId == null) {
+            return null;
+        }
+        return habilidadRepository.findByExternalId(habilidadId)
+            .map(habilidad -> {
+                var rubro = habilidad.getRubro();
+                if (rubro == null) {
+                    log.warn("La habilidad externa {} no tiene rubro asociado (solicitud {}).",
+                        habilidadId, solicitud.getId());
+                    return null;
+                }
+                Long rubroExternalId = rubro.getExternalId();
+                if (rubroExternalId == null) {
+                    log.warn("El rubro interno {} asociado a la habilidad externa {} no tiene externalId (solicitud {}).",
+                        rubro.getId(), habilidadId, solicitud.getId());
+                    return null;
+                }
+                solicitud.setRubroId(rubroExternalId);
+                return rubroExternalId;
+            })
+            .orElseGet(() -> {
+                log.warn("No se encontró la habilidad externa {} en la base local (solicitud {}).",
+                    habilidadId, solicitud.getId());
+                return null;
+            });
+    }
+
+    private Long resolveRubroId(SolicitudesCreadasDTO dto) {
+        if (dto.getRubro() != null) {
+            return dto.getRubro();
+        }
+        Long habilidadId = dto.getHabilidadId();
+        if (habilidadId == null) {
+            return null;
+        }
+        return habilidadRepository.findByExternalId(habilidadId)
+            .map(habilidad -> {
+                var rubro = habilidad.getRubro();
+                if (rubro == null) {
+                    log.warn("La habilidad externa {} no tiene un rubro asociado (solicitud {}).", habilidadId, dto.getSolicitudId());
+                    return null;
+                }
+                Long rubroExternalId = rubro.getExternalId();
+                if (rubroExternalId == null) {
+                    log.warn("El rubro interno {} asociado a la habilidad externa {} no tiene externalId (solicitud {}).",
+                        rubro.getId(), habilidadId, dto.getSolicitudId());
+                }
+                return rubroExternalId;
+            })
+            .orElseGet(() -> {
+                log.warn("No se encontró la habilidad externa {} en la base local (solicitud {}).", habilidadId, dto.getSolicitudId());
+                return null;
+            });
     }
 
     private Ventana parseVentana(String ventana) {
@@ -493,6 +825,8 @@ public class SolicitudService {
         LocalTime hasta = LocalTime.parse(p[1].trim());
         return new Ventana(desde, hasta);
     }
+
+    private record CreacionResultado(Solicitud solicitud, boolean esNueva) {}
 
     private record Ventana(LocalTime desde, LocalTime hasta) {}
 
@@ -526,9 +860,8 @@ public class SolicitudService {
                 putIfNotNull(details, "usuarioId", s.getUsuarioId());
                 putIfNotNull(details, "rubroId", s.getRubroId());
                 putIfNotNull(details, "descripcion", s.getDescripcion());
-                putIfNotNull(details, "preferenciaDia", s.getPreferenciaDia());
-                putIfNotNull(details, "preferenciaDesde", s.getPreferenciaDesde());
-                putIfNotNull(details, "preferenciaHasta", s.getPreferenciaHasta());
+                putIfNotNull(details, "fecha", s.getFecha());
+                putIfNotNull(details, "horario", s.getHorario());
                 putIfNotNull(details, "preferenciaVentana", s.getPreferenciaVentanaStr());
             }
             case COTIZANDO -> {
@@ -536,9 +869,8 @@ public class SolicitudService {
                 title = "Solicitud en cotización";
                 description = "La solicitud está COTIZANDO";
                 putIfNotNull(details, "rubroId", s.getRubroId());
-                putIfNotNull(details, "preferenciaDia", s.getPreferenciaDia());
-                putIfNotNull(details, "preferenciaDesde", s.getPreferenciaDesde());
-                putIfNotNull(details, "preferenciaHasta", s.getPreferenciaHasta());
+                putIfNotNull(details, "fecha", s.getFecha());
+                putIfNotNull(details, "horario", s.getHorario());
                 putIfNotNull(details, "preferenciaVentana", s.getPreferenciaVentanaStr());
             }
             case ASIGNADA -> {
@@ -574,5 +906,10 @@ public class SolicitudService {
 
     private static void putIfNotNull(Map<String, Object> map, String key, Object value) {
         if (value != null) map.put(key, value);
+    }
+
+    public Solicitud obtenerDetalle(Long id) {
+        return solicitudRepository.findByExternalId(id)
+                .orElseThrow(() -> new IllegalArgumentException("Solicitud no encontrada: " + id));
     }
 }
